--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
-
 {
   "name": "movie-quiz",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "npm run build && gh-pages -d dist"
+},
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
@@ -22,6 +21,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "sass": "^1.87.0",
     "typescript": "~5.8.3",
