--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{ secrets.GH_PAT }}  
+          personal_token: ${{ secrets.GH_PAT }}   # 🔥 ОБОВʼЯЗКОВО так!
           publish_dir: ./dist
           publish_branch: gh-pages
